Started creating unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,18 @@
 			<optional>true</optional> <!-- For Maven -->
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
