--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/finance_vault
+#    jdbc:postgresql://localhost:5433/finance_vault
+    url: jdbc:postgresql://ep-sweet-morning-a21it4qc-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channelBinding=require
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
